--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "dependencies": {
     "@tabler/icons-react": "^3.31.0",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.501.0",
     "motion": "^12.7.4",
     "react": "^19.0.0",
-    "react-animated-cursor": "^2.11.2",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
